[package]
name = "sanctum_swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.81"

reqwest = "0.11.24"

toml = "0.8.12"
rand = "0.8.5"

solana-client =  "1.18.9"
solana-sdk = "1.18.9"

bincode = "1.3.3"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.22.0"
regex = "1.10.4"