[package]
name = "sanctum_swap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
futures-util = "0.3.28"
anyhow = "1.0.82"

reqwest = "0.11.24"

toml = "0.8.12"
rand = "0.8.5"

solana-client =  "1.18.9"
solana-sdk = "1.18.9"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

bincode = "1.3.3"
serde_json = "1.0.114"
serde = { version = "1.0.200", features = ["derive"] }
base64 = "0.22.1"
regex = "1.10.4"
bs58 = "0.5.1"
lazy_static = "1.4.0"
